27 February 2017: Wouter
	- Fix #1227: Fix that Unbound control allows weak ciphersuits.
	- Fix #1226: provide official 32bit binary for windows.

24 February 2017: Wouter
	- include sys/time.h for new shm code on NetBSD.

23 February 2017: Wouter
	- Fix doc/CNAME-basedRedirectionDesignNotes.pdf zone static to
	  redirect.
	- Patch from Luiz Fernando Softov for Stats Shared Memory.
	- unbound-control stats_shm command prints stats using shared memory,
	  which uses less cpu.
	- make depend, autoconf, doxygen and lint fixed up.

22 February 2017: Wouter
	- Fix #1224: Fix that defaults should not fall back to "Program Files
	  (x86) if Unbound is 64bit by default on windows.

21 February 2017: Wouter
	- iana portlist update

16 February 2017: Wouter
	- sldns updated for vfixed and buffer resize indication from getdns.

15 February 2017: Wouter
	- sldns has ED25519 and ED448 algorithm number and name for display.

14 February 2017: Wouter
	- tag 1.6.1rc3. -- which became 1.6.1 on 21feb, trunk has 1.6.2

13 February 2017: Wouter
	- Fix autoconf of systemd check for lack of pkg-config.

10 February 2017: Wouter
	- Fix pythonmod for typedef changes.
	- Fix dnstap for warning of set but not used.
	- tag 1.6.1rc2.

9 February 2017: Wouter
	- tag 1.6.1rc1.

8 February 2017: Wouter
	- Fix for type name change and fix warning on windows compile.

7 February 2017: Wouter
	- Include root trust anchor id 20326 in unbound-anchor.

6 February 2017: Wouter
	- Fix compile on solaris of the fix to use $host detect.

4 February 2017: Wouter
	- fix root_anchor test for updated icannbundle.pem lower certificates.

26 January 2017: Wouter
	- Fix 1211: Fix can't enable interface-automatic if no IPv6 with
	  more helpful error message.

20 January 2017: Wouter
	- Increase MAX_MODULE to 16.

19 January 2017: Wouter
	- Fix to Rename ub_callback_t to ub_callback_type, because POSIX
	  reserves _t typedefs.
	- Fix to rename internally used types from _t to _type, because _t